fixed formatting on firefox.  updated gallery

--- a/app/stylesheets/application.sass
+++ b/app/stylesheets/application.sass
@@ -20,7 +20,7 @@ img
 
 
   .header
-    background-image: url(/images/img_misc/bguftc  background-repeat: no-repeat
+    background-image: url(/images/img_misc/bg_top.gif) background-repeat: no-repeat
     background-position: right top
     font-size: 0.9em
     text-align: right
